# StandartWX

./: .gitignore  CMakeLists.txt  README.md  api.cpp  api.h  main.cpp  utils.cpp  utils.h  weather.cpp  weather.h
include/: api.h  http.h  json_parser.h  weather.h
src/: http.cpp  weather.cpp
